Fixed Issues with New header Display
+ Body scrolling is now disabled only if a menu item is taller than the
window
+ Body retains scrollbar, so there is no horizontal jump when scrolling
is disabled
+ Previously active menu items are now inactivated when the spawned TOC
menu is closed.

--- a/system/application/views/melons/cantaloupe/css/updated_header.css
+++ b/system/application/views/melons/cantaloupe/css/updated_header.css
@@ -1,6 +1,8 @@
 /*New CSS*/
 body.in_menu{
-	overflow: hidden !important;
+	position: fixed; 
+    overflow-y: scroll;
+    width: 100%;
 }
 .navbar a, #mobileMainMenuSubmenus a{
 	cursor: pointer;
@@ -80,7 +82,6 @@ a.headerIcon{
 	background-color: #303030;
 	width: 22px;
 	z-index: 100;
-	outline: 0;
 	height: 22px;
 	line-height: 0;
 }
@@ -100,7 +101,6 @@ a.headerIcon{
 
 .expandedPage .close{
 	margin-right: 0;
-	outline: 0;
 }
 .mainMenuDropdown{
 	-webkit-transition: -webkit-transform .5s;
@@ -195,9 +195,6 @@ a.headerIcon{
 .navbar{
 	z-index: 1039;
 }
-.navbar li a.headerIcon{
-	outline: 0;
-}
 .navbar, .title_wrapper{
 	-webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -242,7 +239,6 @@ a.headerIcon{
 #ScalarHeaderMenuSearch.search_open, #ScalarHeaderMenuSearch.search_open a{
 	background-color: #353535;
 	color: white;
-	outline: 0;
 }
 #ScalarHeaderMenuSearchForm{
 	background-color: #353535;
@@ -821,7 +817,6 @@ i.loader{
 	#mobileMainMenuSubmenus header .headerIcon{
 		background-color: #353535;
 		color: white;
-		outline: 0;
 		text-decoration: none;
 		width: 100%;
 		text-align: left;
@@ -873,7 +868,6 @@ i.loader{
 		background-color: #006793;
 		border-radius: 0;
 		color: #fff;
-		outline: 0;
 	}
 	#mobileMainMenuSubmenus footer button:hover, #mobileMainMenuSubmenus footer button:active{
 		background-color: #000;
@@ -890,7 +884,6 @@ i.loader{
 		background-color: #006793;
 		border-radius: 0;
 		color: #fff;
-		outline: 0;
 	}
 	.tocMenu .expandedPage .relationships strong{
 		color: #fff;
